# rust-cpp-linking-repro

./: .clangd  Makefile  README.md  environment.yml
cpp/: CMakeLists.txt  main.cpp
cpp/include/: helloworld.h
cpp/src/: helloworld.cpp
rust/: Cargo.toml  build.rs  pyproject.toml  rust-toolchain.toml
rust/src/: bridge.rs  lib.rs
rust_pyo3/: Cargo.toml  build.rs  pyproject.toml  rust-toolchain.toml
rust_pyo3/.cargo/: config.toml
rust_pyo3/src/: lib.rs
